[package]
name = "tn-wasm"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WebAssembly bindings for tn-core. Node and browser."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `default-features = false` strips the native default set (`fs` +
# `fs-locking`). Phase 7 split `fs-locking` out from `fs`: enabling
# `fs` alone gives `WasmRuntime` access to the storage-backed runtime
# code path (which uses `std::fs` stubs on `wasm32-unknown-unknown`
# only as a fallback — every `Runtime::init` path goes through
# `Storage` injection instead) without pulling in `fs4 → rustix →
# errno`. The `runtime` feature below turns on `fs`.
tn-core = { path = "../tn-core", default-features = false }
tn-btn = { path = "../tn-btn" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
# getrandom needs the `js` feature so `rand_core` can pull entropy from
# the host (crypto.getRandomValues) on wasm32-unknown-unknown.
getrandom = { version = "0.2", features = ["js"] }
base64 = { workspace = true }
bs58 = "0.5"

[features]
# `WasmRuntime` (the Phase 7 widening) is now part of the default set
# because the ts-sdk consumer requires it — without it the pkg's
# `tn_wasm.d.ts` lacks the `WasmRuntime` export and `ts-sdk` typecheck
# fails. To build the minimal crypto-only surface, opt out explicitly:
# `wasm-pack build --no-default-features`.
default = ["runtime"]

# Phase 7: enables `WasmRuntime`. Pulls in tn-core's `fs` feature
# (which today is just the filesystem-backed modules — log_file,
# identity, FsStorage, Runtime — minus `fs-locking` so we don't drag
# in `fs4 → rustix → errno`, which refuses to compile on wasm32).
# The wasm `Runtime` works against a `JsStorageAdapter` rather than
# `std::fs` directly, so the absence of cross-process advisory locks
# is a non-issue: single-process, single-threaded.
runtime = ["tn-core/fs"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
